# camweb

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml  LICENSE  Secrets.toml.example  Shuttle.toml
server/src/: lib.rs
src/: lib.rs
ui/: Cargo.toml  README.md  deploy.sh  index.html  index.scss
ui/assets/: 404.html
ui/src/: app.rs
