[package]
name = "camweb-api"
description = "Simple webapp to see and upload images from a cam or any device with http post"
repository = "https://github.com/Westixy/camweb"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.7.0", features = ["web-rocket"] }
shuttle-secrets = "0.7.0"
rocket = "0.5.0-rc.2"
anyhow = "1.0.65"

